# rs-max

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  README.md  bacon.toml  clippy.toml  deny.toml  dprint.json  justfile  rust-analyzer.toml  rustfmt.toml  typos.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/workflows/: ci.yml
src/: lib.rs  main.rs
