[package]
name = "rs-max"
version = "0.1.0"
edition = "2024"
description = "Maximum strictness Rust project"
license = "MIT"
repository = "https://github.com/user/rs-max"
readme = "README.md"
keywords = ["template"]
categories = ["development-tools"]

[dependencies]

[lints.rust]
# Promote all warnings to errors
warnings = "deny"

# Every allow-by-default rustc lint — forbid
unsafe_code = "forbid"
absolute_paths_not_starting_with_crate = "forbid"
ambiguous_negative_literals = "forbid"
closure_returning_async_block = "forbid"
deprecated_in_future = "forbid"
deprecated_safe_2024 = "forbid"
deref_into_dyn_supertrait = "forbid"
edition_2024_expr_fragment_specifier = "forbid"
elided_lifetimes_in_paths = "forbid"
explicit_outlives_requirements = "forbid"
ffi_unwind_calls = "forbid"
if_let_rescope = "forbid"
impl_trait_overcaptures = "forbid"
impl_trait_redundant_captures = "forbid"
invalid_type_param_default = "forbid"
keyword_idents_2018 = "forbid"
keyword_idents_2024 = "forbid"
let_underscore_drop = "forbid"
linker_messages = "forbid"
macro_use_extern_crate = "forbid"
meta_variable_misuse = "forbid"
missing_copy_implementations = "forbid"
missing_debug_implementations = "forbid"
missing_docs = "forbid"
missing_unsafe_on_extern = "forbid"
non_ascii_idents = "forbid"
patterns_in_fns_without_body = "forbid"
redundant_imports = "forbid"
redundant_lifetimes = "forbid"
rust_2018_idioms = { level = "forbid", priority = -1 }
rust_2021_incompatible_closure_captures = "forbid"
rust_2021_incompatible_or_patterns = "forbid"
rust_2021_prefixes_incompatible_syntax = "forbid"
rust_2021_prelude_collisions = "forbid"
rust_2024_guarded_string_incompatible_syntax = "forbid"
rust_2024_incompatible_pat = "forbid"
rust_2024_prelude_collisions = "forbid"
single_use_lifetimes = "forbid"
tail_expr_drop_order = "forbid"
trivial_casts = "forbid"
trivial_numeric_casts = "forbid"
unit_bindings = "forbid"
unnameable_types = "forbid"
unreachable_pub = "forbid"
unsafe_attr_outside_unsafe = "forbid"
unsafe_op_in_unsafe_fn = "forbid"
unstable_features = "forbid"
unused_crate_dependencies = "forbid"
unused_extern_crates = "forbid"
unused_import_braces = "forbid"
unused_lifetimes = "forbid"
unused_macro_rules = "forbid"
unused_qualifications = "forbid"
unused_results = "forbid"
variant_size_differences = "forbid"

[lints.clippy]
# Everything on, max severity
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
restriction = { level = "deny", priority = -1 }

# Contradicting lint pairs — pick one side, forbid it, allow the other
separated_literal_suffix = "allow"        # keep unseparated_literal_suffix
pub_with_shorthand = "allow"              # keep pub_without_shorthand
self_named_module_files = "allow"         # keep mod_module_files
exhaustive_enums = "allow"                # keep non_exhaustive_omitted_patterns
exhaustive_structs = "allow"              # keep non_exhaustive_omitted_patterns
ref_patterns = "allow"                    # keep pattern_type_mismatch
blanket_clippy_restriction_lints = "allow" # meta-lint about enabling restriction group

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.dev.package."*"]
opt-level = 2
