[package]
name = "rs-max"
version = "0.1.0"
categories = ["development-tools"]
edition = "2024"
keywords = ["template"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/1qh/rs-max"
description = "Maximum strictness Rust project"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
opt-level = 3

[profile.dev.package."*"]
opt-level = 2
